--- a/index.html
+++ b/index.html
@@ -1877,10 +1877,10 @@
                 <section class="section is--videos">
                     <div id="up" class="container">
                         <div href="#contact" class="videos">
-                            <div data-poster-url="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.mp4,https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video w-background-video w-background-video-atom">
+                            <div data-poster-url="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2441.jpg" data-video-urls="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.mp4,https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video w-background-video w-background-video-atom">
                                 <video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                                    <source src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.mp4" data-wf-ignore="true"/>
-                                    <source src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb576bbffdd3c1b2dd4e1a_RETO-OutputVideo-20201204222900-transcode.webm" data-wf-ignore="true"/>
+                                    <source src="gale.MP4" data-wf-ignore="true"/>
+                    
                                 </video>
                             </div>
                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc9c812a2c0645896993d32_video-yellow.svg" loading="lazy" alt="" class="video__sticker4"/>
