--- a/index.html
+++ b/index.html
@@ -1899,10 +1899,10 @@
                                     
                                 </video>
                             </div>
-                            <div data-poster-url="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.mp4,https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video is--2nd w-background-video w-background-video-atom">
+                            <div data-poster-url="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2441.jpg" data-video-urls="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.mp4,https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="video is--2nd w-background-video w-background-video-atom">
                                 <video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-                                    <source src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.mp4" data-wf-ignore="true"/>
-                                    <source src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fcb57106f6f3b7c2277cd9b_RETO-OutputVideo-20201124180006-transcode.webm" data-wf-ignore="true"/>
+                                    <source src="fakegale.MP4" data-wf-ignore="true"/>
+                                  
                                 </video>
                             </div>
                         </div>
