--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                         </a>
                         <a href="#pricing" class="nav__link w-inline-block">
                             <img src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc5b7d9d088cd3b91add7e7_nav-flower.svg" loading="lazy" alt="" class="nav__icon"/>
-                            <h6>เกวลีอยู่ไหน</h6>
+                            <h6>เกมแสนสนุก</h6>
                             <div class="nav__link-lottie">
                                 <div data-w-id="abb43834-ad32-1bd8-9b46-f4cdfe71a21f" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc5cb14d721934cfd906bad_about-lottie.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="svg" data-default-duration="1.3477177666797182" data-duration="0" data-ix2-initial-state="0" class="nav__lottie"></div>
                             </div>
