--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                             <div class="about__img">
                                 <div class="about__img-shadow is--2"></div>
                                 <div href="#gallery" class="about__photo">
-                                    <div data-w-id="" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5fc3edc939e45606bb1beaed/5fc7bfc4d0039d7778d41875_mack-pouya-lottie.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="svg" data-default-duration="0.65" data-duration="0" class="about__photo-lottie"></div>
+                                    <div data-w-id="" data-animation-type="lottie" data-src="" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="svg" data-default-duration="0.65" data-duration="0" class="about__photo-lottie"></div>
                                     <div data-poster-url="https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2441.jpg"  data-autoplay="true" data-loop="true" data-wf-ignore="true" class="about__video w-background-video w-background-video-atom">
                                         <video autoplay="" loop="" style="background-image:url(&quot;https://raw.githubusercontent.com/jamessakda/LANDin.github.io/main/images/IMG_2441.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                                             <source src="Untitled_Artwork_3.mp4" data-wf-ignore="true"/>
