--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 }
                 </style>
             </div>
-            <div class="bookmark">
+            <!--<div class="bookmark">
                 <div class="bookmark__contain">
                     <div class="bookmark__form">
                         <div class="bookmark__form-box w-form">
@@ -620,7 +620,7 @@
                     </div>
                 </div>
             </nav>
-        </div>
+        </div>-->
 
         <section data-w-id="b71f1599-9742-ff86-736d-01c16d08b344" class="section is--loader">
             <div class="container is--loader">
